Refactor logging statements to improve error context and remove redundant methods; centralize color code stripping in TextUtil + more